--- a/html.html
+++ b/html.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="C:\Users\Student\Desktop\CaseH\StyleSheet1.css">
-    <style>
+    <meta charset="UTF-8"><style>
     body{
     background-color: tan;
     }
@@ -18,7 +16,6 @@
     margin: auto;
     width: 100%;
     border: 3px solid green;
-
     background-color: CornflowerBlue;
 }
     .review {
@@ -28,8 +25,7 @@
     text-align:center;
     border: 2px solid black;
     float:auto;
-    padding:10px;
-    }
+        }
 
     #blue{background-color:darkBlue;color:CornflowerBlue;}
     #green{background-color:DarkGreen;color:DarkSeaGreen;}
@@ -50,30 +46,35 @@
     <div id = "blue"; class = "review">
         <h4>Blue</h4>
         <div style="border: 1px solid black; background-color:black;"></div>
-        <p>Blue is an overal solid color. It is used well in painting houses, paintings, and many others, but not really cars. Most shades look nice, although there is some bad ones. All in all, blue is an overall solid color. 9/10</p>
+        <p>Blue is an overall solid color. It is used well in painting houses, paintings, and many others, but not really cars. Most shades look nice, although there is some bad ones. All in all, blue is an overall solid color. 9/10</p>
+        <p>Blue is the old reliable, it works in any kind of decoration be it clothing or room decor, and it brings back memories of the sky and the sea, two of the most beautiful things in nature, overall, blue is an incredible and dependable color.</p>
     </div>
 
     <div id = "green" class = "review">
         <h4>Green</h4>
         <div style="border: 1px solid black; background-color:black;"></div>
         <p>Green is fairly hit or miss. About half the shades are good, and half the shades are bad. Nice leafy greens look good while dirty and grimy greens look bad. All things considered, green is overall positive. 7/10</p>
+        <p>Green is a good color overall, it has many shades and they're all good, my favorites r sage green and vivid green, but most shades are incredible and beautiful.</p>
     </div>
 
     <div id = "orange" class = "review">
         <h4>Orange</h4>
         <div style="border: 1px solid black; background-color:black;"></div>
-        <p>Orange is a usualy bad color. It only has sunset oranges going for it, but most other oranges look like bright and alarming traffic cones. As the color is intentionally used with traffic cones to catch attention, it is hard to look away from and is grating on the eyes. As most oranges represent the traffic cone group, I give it a 3/10</p>
+        <p>Orange is a usually bad color. It only has sunset oranges going for it, but most other oranges look like bright and alarming traffic cones. As the color is intentionally used with traffic cones to catch attention, it is hard to look away from and is grating on the eyes. As most oranges represent the traffic cone group, I give it a 3/10</p>
+        <p>Orange is the color of oranges, it evokes a feeling of happiness and joy, a feeling of fun and nature, it's a good smell and a good juice and overall is a good vibe. </p>
     </div>
 
     <div id = "white" class = "review">
         <h4>White</h4>
         <div style="border: 1px solid black; background-color:black;"></div>
         <p>White is not good, but is hated on too much. White will look well if in the right circumstance. For example, it looks nice on the right car, and it is objectively the right choice for bathrooms and kitchens. However, white is still very harsh and bright. It's also very basic and doesn't have much else going for it. 4/10</p>
+        <p>White is a dependable base color, it goes on anything and everything, it goes on decorative pieces, clothing items and clouds, it can either blend in our stand out from the crowd, and it is definitely an amazing color to master the use of. </p>
     </div>
 
     <div id = "brown" class = "review"><h5>Brown</h5>
         <div style="border: 1px solid black; background-color:black;"></div>
         <p>Brown is fine. There are some ok colors, but nothing bad. there really isn't much to say about brown. It pairs well with white in kitchens and looks good on furniture. Some lighter browns are more appealing than white, but there are no vibrant or outstanding browns. not much to it. 5/10</p>
+        <p>Brown is a volatile color, if you use just the right amount you can get incredible outfits and decorative pieces, but if you use too much you can get washed out colors and blending fits. I would say it's still a very useful color, if used correctly of course.</p>
     </div>
 
 </body>
