--- a/html.html
+++ b/html.html
@@ -41,8 +41,9 @@
         <img src="https://cdn.britannica.com/70/191970-050-1EC34EBE/Color-wheel-light-color-spectrum.jpg?q=60" alt="COLOR WHEEL" id="headerImg" style="width: 100%; padding: 0px;">
     </div>
 
+    <div id="input"></div>
 
-    <div id = "blue"; class = "review">
+    <div id = "blue" class = "review">
         <h4>Blue</h4>
         <div style="border: 1px solid black; background-color:black;"></div>
         <p>Blue is an overall solid color. It is used well in painting houses, paintings, and many others, but not really cars. Most shades look nice, although there is some bad ones. All in all, blue is an overall solid color. 9/10</p>
